# connectFour_LUTGenerator

./: CMakeLists.txt  README.md  main.cpp
LUT/: LUT_0.txt  LUT_1.txt  LUT_2.txt  LUT_3.txt  LUT_4.txt  LUT_5.txt  LUT_6.txt
include/: TranspositionTable.hpp  solver.hpp
